...
    val team by viewModel.team.collectAsState(initial = emptyList())

    Column(modifier = Modifier.fillMaxSize()) {
        Surface(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("teamHeader"),
            color = Color(0xFF2B5876)
        ) {
            Text(
                text = stringResource(id = R.string.team),
                fontSize = 24.sp,
                color = Color.White,
...
