...
@Composable
fun AppNav() {
    MaterialTheme {
        val navController = rememberNavController()
        Scaffold(
            bottomBar = {
                BottomNavigation(backgroundColor = Color.DarkGray, modifier = Modifier.testTag("bottom_navigation")) {
                    val navBackStackEntry by navController.currentBackStackEntryAsState()
                    val currentDestination = navBackStackEntry?.destination
                    NavigationBarTabs.forEach { tab ->
                        BottomNavigationItem(
                            modifier = Modifier.testTag("nav_item_${tab.label}"),
                            icon = { Icon(painter = painterResource(tab.icon), contentDescription = tab.label, modifier = Modifier.size(96.dp), tint = Color.Unspecified ) },
...
