...
    val viewModel: PokemonListViewModel = viewModel(factory = PokemonViewModelFactory(repository))
    val pagedPokemon = viewModel.pagedPokemon.collectAsLazyPagingItems()

    Column (
        modifier = Modifier
            .fillMaxSize()
            .testTag("pokemon_home_column")) {
        Surface(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("pokemon_home_surface"),
            color = Color(0xFF2B5876)
        ) {
...
