...
        toastMessage?.let {
            Toast.makeText(context, it, Toast.LENGTH_SHORT).show()
            viewModel.clearToastMessage()
        }
    }

    Column(modifier = Modifier.fillMaxSize().testTag("random_screen_content")) {
        Surface(
            modifier = Modifier.fillMaxWidth(),
            color = Color(0xFF2B5876),
        ) {
            Text(
                text = "Random Generator",
...
